--- a/nextjs/tamuhack25/package.json
+++ b/nextjs/tamuhack25/package.json
@@ -12,7 +12,8 @@
     "@supabase/supabase-js": "^2.48.1",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "supabase": "^2.6.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
