--- a/nextjs/tamuhack25/package.json
+++ b/nextjs/tamuhack25/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/supabase-js": "^2.48.1",
+    "@tremor/react": "^3.18.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
